[package]
name = "nasabg"
version = "0.1.0"
authors = ["Korvin Szanto <me@kor.vin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wallpaper = "2.0.1"
colored = "2.0.0"
chrono = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
regex = "1.3"
lazy_static = "1.4"